# Personal-Assistant-Using-AI-Agent-llama3.1-Ollama-Crewai

./: .env  .gitignore  main.py  main_test.py  my_agents.py  my_tasks.py  my_tools.py  pyproject.toml
