[tool.poetry]
name = "Study-Planner"
version = "0.1.0"
description = "It will help engineering students with his studies and schedules like a personal assistant"
authors = ["Anjum Ulazim"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "*"
unstructured = '*'
tools = "*"
python-dotenv = "*"
google-api-python-client = "^2.142.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
google = "^3.0.0"
crewai-tools = "^0.8.3"
duckduckgo-search = "^6.2.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"